<resources>
    <string name="app_name">Adopy</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercode those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="yes_happy">YES :)</string>
    <string name="yes_sad">YES :(</string>
    <string name="no">NO</string>
    <string name="no_happy">NO :)</string>
    <string name="no_sad">NO :(</string>
    <string-array name="sex_array">
        <item>"Male"</item>
        <item>"Doesn't matter"</item>
        <item>"Female"</item>
    </string-array>
    <string-array name="type_array">
        <item name="Dog">Dog</item>
        <item name="Cat">Cat</item>
        <item name="Rabbit">Rabbit</item>
        <item name="Hedgehog">Hedgehog</item>
        <item name="Chinchilla">Chinchilla</item>
        <item name="Iguana">Iguana</item>
        <item name="Turtle">Turtle</item>
    </string-array>
    <string-array name="gender_array">
        <item>"Male"</item>
        <item>"Female"</item>
    </string-array>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_pet_page">PetPageActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="pet_s_name">Pet\'s Name</string>
    <string name="weeklyUpdatesChannelName">weekly Updates Channel</string>
    <string name="weeklyUpdatesChannelDesc">Don\'t miss your best friend. See the new animals added when you weren\'t here</string>
    <string name="weeklyUpdatesChannelTitle">Pets update</string>
    <string name="onBootChannelName">on Boot Channel</string>
    <string name="onBootChannelDesc">Adopt animals around you in ease</string>
    <string name="onBootChannelTitle">Don\'t miss out!</string>
    <string name="reminderRepeat_tv_hint">get updates every X minuets</string>
    <string name="distance_in_km">Distance in km</string>
    <string name="types">Types</string>
    <string name="prompt_email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign in</string>
    <string name="prompt_password">Password </string>
    <string name="forgotPass">Forgot your Password?</string>
    <string name="signup_press">Don\'t have an account?</string>
    <string name="signUpEmailBTN">Press HERE to Sign Up now</string>
    <string name="blank">One or more details are blank.</string>
    <string name="success">You entered successfully</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error">Error have been occurred, sorry. Please try again later</string>
    <string name="nick_name">Nick Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup_now">Sign Up Now !</string>
    <string name="or">OR</string>
    <string name="adopt_me_now_and_save_me_from_the_street">Adopt me now and save me from the street..</string>
    <string name="new_pet">New Pet</string>
    <string name="what_is_her_his_age">What it\'s age?</string>
    <string name="describe_your_pet_in_a_few_words">Describe your pet in a few words..</string>
    <string name="username">username</string>
    <string name="kind">Kind:</string>
    <string name="location">Location: </string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="info">Info</string>
    <string name="Search_page">Search Page</string>
    <string name="Profile_Page">Profile Page</string>
    <string name="add_pet_IV_contentDescription">add pet image</string>
    <string name="logo_IV_contentDescription">Adopy logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
    <string name="Chat_page">Chat Page</string>
    <string name="type_a_message">Type a message…</string>
    <string name="empty_msg">You can\'t send an empty message</string>
    <string name="no_msg">No Message</string>
    <string name="please_login">Please Login</string>
    <string name="go_back">back</string>
    <string name="dialog_login">Login</string>
    <string name="msg_owner_dialog_body">In order to message the owner you need to login</string>
    <string name="add_fav_dialog_body">To save your favorite pets you need to login</string>
    <string name="add_pet_dialog_body">To add a pet you need to login</string>
    <string name="title_activity_start_bottom" translatable="false">StartBottomActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_my_fav">My Favorites</string>
    <string name="delete">delete</string>
    <string name="keep">keep</string>
    <string name="deleting_a_pet">Deleting a Pet</string>
    <string name="deleting_a_chat">Deleting a Chat</string>
    <string name="delete_pet_dialog_body">Are you sure you want to delete</string>
    <string name="delete_chat_dialog_body">Are you sure you want to delete your chat with</string>
    <string name="Select_pet_species">Select pet species</string>
    <string name="use_current_location">use my current location</string>
    <string name="Select_pet_gender">Select pet gender</string>
    <string name="save_new_pet">save pet?</string>
    <string name="menu_chats">Chats</string>
</resources>