<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/action_search" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_my_pets"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/title_my_pets" />
    </group>

    <item >
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_rounded_right"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/dialog_login" />
        </menu>
    </item>

</menu>
