<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:clipToPadding="false"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="30dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/pink"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/kind"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/kindSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        app:spinnerDirection="ltr"
                        app:spinnerHint="@string/Select_pet_species" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/use_current_location"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/age"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/Age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/gender"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/genderSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        app:spinnerDirection="ltr"
                        app:spinnerHint="@string/Select_pet_gender" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/price"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/back_text"
                        android:hint="@string/price"
                        android:inputType="number"
                        android:padding="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/info"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/back_text"
                        android:hint="@string/describe_your_pet_in_a_few_words"
                        android:padding="10dp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/cancelBtnEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>