<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        card_view:cardCornerRadius="20dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pet_s_name"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pet_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/foot"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/publish_date"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/date"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/pet_price"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/price"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>